--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,12 @@ path = "src/bin/str2zw.rs"
 name = "zw2str"
 path = "src/bin/zw2str.rs"
 
+[[bin]]
+name= "zw"
+path = "src/bin/auto.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+structopt = { version = "0.3", default-features = false }
+atty = "0.2"
