update cargo manifest with license, description, url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "zw"
 version = "0.1.0"
 edition = "2018"
+license = "MIT"
+description = "Utility for encoding and decoding text using zero-width characters"
+repository = "https://github.com/tje/rs-zw"
+readme = "README.md"
 
 [lib]
 name = "zw"
